--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,10 @@ pinax-theme-bootstrap-account==1.0b2
 django-user-accounts==1.0b3
 django-forms-bootstrap==2.0.3.post1
 metron==1.0
+dj-database-url
 pinax-utils==1.0b1.dev3
 webtest
 django-webtest
 django-notification
+gunicorn==18.0
+wsgiref==0.1.2
